feat(template): adds fonts

--- a/template/index.html
+++ b/template/index.html
@@ -13,7 +13,7 @@
 	<div id="wrapper" class="md:mx-36 sm:mx-0">
 		<nav
 			class="bg-primary-100 dark:bg-primary-800 md:mt-2 w-auto h-10 md:border-b-2 md:border-r-2 border-primary-900 sm:border-b-0 sm:border-r-0">
-			<ul class="text-primary-900 py-auto h-full flex items-center justify-center">
+			<ul class="text-primary-900 py-auto h-full flex items-center justify-center font-primary">
 				<li class="md:px-10 md:mx-5 px-5 dark:text-primary-100">
 					<a href="#" class="hover:text-primary-800 dark:hover:text-primary-900">About</a>
 				</li>
@@ -33,20 +33,22 @@
 					<div id="third-image" class="h-40 w-60 object-cover px-6 my-4 mx-2 rounded-r-lg"></div>
 				</div>
 				<div id="text">
-					<h2 class="md:mx-12 mx-6 font-medium text-2xl dark:text-primary-100">Brown: Using different colors</h2>
-					<p class="md:mx-12 mx-6 my-2 dark:text-primary-100">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+					<h2 class="md:mx-12 mx-6 font-medium text-2xl dark:text-primary-100 font-secondary">Brown: Using different
+						colors</h2>
+					<p class="md:mx-12 mx-6 my-2 dark:text-primary-100 font-secondary">Lorem ipsum dolor sit amet consectetur
+						adipisicing elit.
 						Numquam assumenda
 						accusamus
 						deleniti,
 						explicabo
 						ullam et. Quis perferendis nihil minus error, maxime ea nisi odio dolorem odit, numquam maiores nam
 						perspiciatis.</p>
-					<div id="info" class="text-primary-200 dark:text-primary-300 md:mx-12 mx-6">by <a
+					<div id="info" class="text-primary-200 dark:text-primary-300 md:mx-12 mx-6 font-secondary">by <a
 							href="https://pauloelienay.com" class="text-primary-900 cursor-pointer dark:text-primary-100"
 							id="author">Paulo
 							Elienay</a></div>
 					<button
-						class="bg-primary-900 dark:bg-primary-400 text-primary-100 uppercase py-2 w-full mt-4 hover:bg-primary-800 focus:bg-primary-800 dark:hover:bg-primary-300 dark:hover:text-primary-900">Share</button>
+						class="bg-primary-900 dark:bg-primary-400 text-primary-100 uppercase py-2 w-full mt-4 hover:bg-primary-800 focus:bg-primary-800 dark:hover:bg-primary-300 dark:hover:text-primary-900 font-primary">Share</button>
 				</div>
 			</div>
 		</main>
