fix(template): updates templates

--- a/blog/templates/blog/layout.html
+++ b/blog/templates/blog/layout.html
@@ -1,9 +1,9 @@
-{% extends "header.html" %}
+{% include "blog/header.html" %}
 
 <body class="bg-primary-300 dark:bg-primary-900">
 	<div id="wrapper" class="md:mx-36 sm:mx-0">
-		{% extends 'navbar.html' %} {% extends 'main.html' %}
+		{% include 'blog/navbar.html' %} {% include 'blog/main.html' %}
 	</div>
 </body>
 
-{% extends "footer.html" %}
+{% include "blog/footer.html" %}
