style(templates): moves to Bulma

--- a/blog/templates/blog/footer.html
+++ b/blog/templates/blog/footer.html
@@ -1,1 +1,8 @@
+<footer class="footer">
+  <div class="content has-text-center">
+    <p>
+      <strong>Telegraph</strong> was made by <a href="https://pauloelienay.com">Paulo Elienay</a>.
+    </p>
+  </div>
+</footer>
 </html>
