--- a/blog/templates/blog/layout.html
+++ b/blog/templates/blog/layout.html
@@ -1,7 +1,7 @@
 {% include "blog/header.html" %}
 
-<body class="bg-primary-300 dark:bg-primary-900">
-	<div id="wrapper" class="md:mx-36 sm:mx-0">
+<body>
+	<div class="block">
 		{% include 'blog/navbar.html' %} {% include 'blog/main.html' %}
 	</div>
 </body>
