--- a/blog/templates/blog/main.html
+++ b/blog/templates/blog/main.html
@@ -1,17 +1,25 @@
-<main class="mt-8">
-  {% if post_list %}
-  {% for post in post_list %}
-  <div id="post" class="bg-primary-100 dark:bg-primary-800 md:border-b-2 md:border-r-2 border-primary-900 mb-12">
-    <div id="text">
-      <h2 class="md:mx-12 mx-6 font-medium text-2xl dark:text-primary-100 font-secondary mt-4">{{ post.title }}</h2>
-      <p class="md:mx-12 mx-6 my-2 dark:text-primary-100 font-secondary">{{ post.content }}</p>
-      <div id="info" class="text-primary-200 dark:text-primary-300 md:mx-12 mx-6 font-secondary">by <a
-          href="{{ post.author_link }}" class="text-primary-900 cursor-pointer dark:text-primary-100"
-          id="author">{{ post.author_name }}</a></div>
-      <button
-        class="bg-primary-900 dark:bg-primary-400 text-primary-100 uppercase py-2 w-full mt-4 hover:bg-primary-800 focus:bg-primary-800 dark:hover:bg-primary-300 dark:hover:text-primary-900 font-primary">Share</button>
-    </div>
-  </div>
-  {% endfor %}
-  {% endif %}
+<main>
+	{% if post_list %} {% for post in post_list %}
+	<div id="post" class="section">
+		<div class="columns is-centered is-half">
+			<div class="column is-8">
+				<div id="text" class="container">
+					<div class="notification is-warning">
+						<h2 class="title">{{ post.title }}</h2>
+						<p class="text">{{ post.content }}</p>
+						<div>
+							by <a href="{{ post.author_link }}">{{ post.author_name }}</a>
+						</div>
+						<button
+							style="margin-top: 1em"
+							class="button is-fullwidth is-warning is-light"
+						>
+							Share
+						</button>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	{% endfor %} {% endif %}
 </main>
